# boost-pypi

./: README.md  pyproject.toml
.github/workflows/: ci.yml  main.yml
src/libboost_headers/: __init__.py
tests/: test_boost_version_header.py  test_msgpack_header.py
